Lilac: Fix some bugs by restricting the creation of some `SequenceCount`s to only use fragments with a specific `readGene`.