@@ -33,7 +33,7 @@ public final class ExtendEvidence
         mExpectedAlleles = expectedAlleles;
     }
 
-    public final List<PhasedEvidence> pairedEvidence()
+    public List<PhasedEvidence> pairedEvidence()
     {
         List<PhasedEvidence> results = Lists.newArrayList();
 
@@ -47,7 +47,7 @@ public final class ExtendEvidence
             List<Integer> indices = Lists.newArrayList(mHeterozygousLoci.get(i), mHeterozygousLoci.get(i + 1));
 
             final List<Fragment> filteredFragments = mFragments.stream()
-                    .filter(x -> x.containsAminoAcidLoci(indices)).collect(Collectors.toList());
+                    .filter(x -> x.containsAminoAcidLoci(indices)).toList();
 
             if(!filteredFragments.isEmpty())
             {
@@ -90,10 +90,10 @@ public final class ExtendEvidence
         int maxExisting = listMax(current.getAminoAcidLoci());
 
         List<PhasedEvidence> othersContainingMax = others.stream()
-                .filter(x -> x != current && x.getAminoAcidLoci().contains(maxExisting)).collect(Collectors.toList());
+                .filter(x -> x != current && x.getAminoAcidLoci().contains(maxExisting)).toList();
 
         List<PhasedEvidence> othersContainingMin = others.stream()
-                .filter(x -> x != current && x.getAminoAcidLoci().contains(minExisting)).collect(Collectors.toList());
+                .filter(x -> x != current && x.getAminoAcidLoci().contains(minExisting)).toList();
 
         if(!othersContainingMin.isEmpty() && !othersContainingMax.isEmpty())
         {
@@ -135,18 +135,19 @@ public final class ExtendEvidence
         return Pair.create(current, Sets.newHashSet());
     }
 
-    private final int minTotalFragments(List<Integer> indices)
+    private int minTotalFragments(final List<Integer> indices)
     {
         return mExpectedAlleles.expectedAlleles(indices) * mConfig.MinFragmentsPerAllele;
     }
 
-    private final Pair<PhasedEvidence, Set<PhasedEvidence>> merge( PhasedEvidence current, PhasedEvidence left, PhasedEvidence right)
+    private Pair<PhasedEvidence, Set<PhasedEvidence>> merge(
+	    final PhasedEvidence current, final PhasedEvidence left, final PhasedEvidence right)
     {
         List<Integer> leftTail = left.unambiguousTailIndices();
         List<Integer> rightHead = right.unambiguousHeadIndices();
-        List<Integer> mergeIndices = leftTail.stream().collect(Collectors.toList());
+        List<Integer> mergeIndices = Lists.newArrayList(leftTail);
 
-        rightHead.stream().filter(x -> !leftTail.contains(x)).forEach(x -> mergeIndices.add(x));
+        rightHead.stream().filter(x -> !leftTail.contains(x)).forEach(mergeIndices::add);
         Collections.sort(mergeIndices);
 
         List<Fragment> filteredFragments = mFragments.stream()
@@ -156,7 +157,8 @@ public final class ExtendEvidence
         {
             int minTotalFragments = minTotalFragments(mergeIndices);
 
-            PhasedEvidence mergeEvidence = PhasedEvidence.evidence(filteredFragments, mergeIndices).removeSingles(mConfig.MinFragmentsToRemoveSingle);
+            PhasedEvidence mergeEvidence = PhasedEvidence.evidence(filteredFragments, mergeIndices)
+		    .removeSingles(mConfig.MinFragmentsToRemoveSingle);
 
             if(CombineEvidence.canCombine(left, mergeEvidence, right))
             {
